[build-system]
requires = [
  "nanobind~=2.5",
  "nanobind<2.10; python_version<'3.9'",
  "scikit-build-core>=0.11",
  "typing-extensions>=3.10, <5; python_version<'3.11'",
]
build-backend = "scikit_build_core.build"

[project]
name = "wwopy"
dynamic = ["version"]
description = "A Python wrapper for World."
readme = "README.md"
requires-python = ">=3.8"
license = "BSD-2-Clause AND BSD-3-Clause"
license-files = ["LICENSE.txt"]
authors = [{ name = "sabonerune" }]
classifiers = [
  "Private :: Do Not Upload",
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: C++",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development",
]
dependencies = ["numpy"]

[project.optional-dependencies]
dev = ["clang-format~=21.0", "clang-tidy~=21.0", "cmakelang", "ruff"]
test = ["pytest"]

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
minimum-version = "build-system.requires"
sdist.include = ["src/wwopy/_version.py"]
sdist.exclude = [
  ".github/",
  "benchmark/",
  "tests/",
  ".clang-format",
  ".clang-tidy",
  ".cmake-format",
  ".gitattributes",
  ".gitignore",
  ".gitmodules",
  "requirements.txt",
  "vendored/World/build/",
  "vendored/World/examples/",
  "vendored/World/test/",
  "vendored/World/visualstudio20[0-9][0-9]/",
  "vendored/World/.gitignore",
  "vendored/World/makefile",
  "vendored/World/styleguide.txt",
]

[tool.setuptools_scm]
version_file = "src/wwopy/_version.py"
version_file_template = '''
_version = "{version}"
'''

[tool.cibuildwheel]
skip = [
  "cp3{9,10}-win_arm64", # Numpy does not support
  "pp38-*",              # Not work
  "pp39-macosx_arm64",   # Numpy does not support
  "pp3{12..99}-*",       # Numpy does not support
]
archs = "auto64"
enable = ["pypy", "pypy-eol"]

test-command = "pytest {project}/tests"
test-extras = ["test"]

build-verbosity = 1

[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.14"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
extend-select = [
  "B",   # flake8-bugbear
  "I",   # isort
  "ARG", # flake8-unused-arguments
  "C4",  # flake8-comprehensions
  "EM",  # flake8-errmsg
  "ICN", # flake8-import-conventions
  "G",   # flake8-logging-format
  "PGH", # pygrep-hooks
  "PIE", # flake8-pie
  "PL",  # pylint
  "PT",  # flake8-pytest-style
  "PTH", # flake8-use-pathlib
  "RET", # flake8-return
  "RUF", # Ruff-specific
  "SIM", # flake8-simplify
  "T20", # flake8-print
  "UP",  # pyupgrade
  "YTT", # flake8-2020
  "EXE", # flake8-executable
  "NPY", # NumPy specific rules
]
ignore = [
  "PLR09",   # Too many <...>
  "PLR2004", # Magic value used in comparison
  "ISC001",  # Conflicts with formatter
]
